--- a/css/site.css
+++ b/css/site.css
@@ -51,7 +51,12 @@ hr {
   grid-row: 3;
 }
 
-
+/* .BarChart-bar {
+  background-color: #4592af;
+  padding: 8px;
+  margin: 5px;
+  color: #e3c4a8;
+} */
 
 /* bars below */
 
@@ -85,12 +90,22 @@ hr {
   margin: 5px;
   color: #e3c4a8;
 }
+.BarChart-bar-MiddleE:hover {
+  transform: perspective(200px) translate3d(5px, 0, 2px);
+  background-color: #000000;
+  transition-duration: 0.4s;
+}
 
 .BarChart-bar-Europe {
   background-color: #226089;
   padding: 8px;
   margin: 5px;
   color: #e3c4a8;
+}
+.BarChart-bar-Europe:hover {
+  transform: perspective(200px) translate3d(5px, 0, 2px);
+  background-color: #000000;
+  transition-duration: 0.4s;
 }
 
 .BarChart-bar-SEAsia {
@@ -99,12 +114,22 @@ hr {
   margin: 5px;
   color: #e3c4a8;
 }
+.BarChart-bar-SEAsia:hover {
+  transform: perspective(200px) translate3d(5px, 0, 2px);
+  background-color: #000000;
+  transition-duration: 0.4s;
+}
 
 .BarChart-bar-SAsia {
   background-color: #226089;
   padding: 8px;
   margin: 5px;
   color: #e3c4a8;
+}
+.BarChart-bar-SAsia:hover {
+  transform: perspective(200px) translate3d(5px, 0, 2px);
+  background-color: #000000;
+  transition-duration: 0.4s;
 }
 
 .BarChart-bar-SaharanA {
@@ -113,12 +138,22 @@ hr {
   margin: 5px;
   color: #e3c4a8;
 }
+.BarChart-bar-SaharanA:hover {
+  transform: perspective(200px) translate3d(5px, 0, 2px);
+  background-color: #000000;
+  transition-duration: 0.4s;
+}
 
 .BarChart-bar-HornA {
   background-color: #226089;
   padding: 8px;
   margin: 5px;
   color: #e3c4a8;
+}
+.BarChart-bar-HornA:hover {
+  transform: perspective(200px) translate3d(5px, 0, 2px);
+  background-color: #000000;
+  transition-duration: 0.4s;
 }
 
 .BarChart-bar-NAfrica {
@@ -127,6 +162,11 @@ hr {
   margin: 5px;
   color: #e3c4a8;
 }
+.BarChart-bar-NAfrica:hover {
+  transform: perspective(200px) translate3d(5px, 0, 2px);
+  background-color: #000000;
+  transition-duration: 0.4s;
+}
 
 .BarChart-bar-SAmerica {
   background-color: #226089;
@@ -134,10 +174,20 @@ hr {
   margin: 5px;
   color: #e3c4a8;
 }
+.BarChart-bar-SAmerica:hover {
+  transform: perspective(200px) translate3d(5px, 0, 2px);
+  background-color: #000000;
+  transition-duration: 0.4s;
+}
 
 .BarChart-bar-CentralCarr {
   background-color: #4592af;
   padding: 8px;
   margin: 5px;
   color: #e3c4a8;
+}
+.BarChart-bar-CentralCarr:hover {
+  transform: perspective(200px) translate3d(5px, 0, 2px);
+  background-color: #000000;
+  transition-duration: 0.4s;
 }
