--- a/css/site.css
+++ b/css/site.css
@@ -16,12 +16,15 @@ body {
 
 .GridContainer {
   display: grid;
-  grid-template-columns: 200px 1fr 200px;
-  grid-template-rows: 150px 1fr auto;
+  align-items: center;
+  grid-template-columns: 1fr minmax(auto, 600px) 1fr;
+  grid-template-rows: 1fr minmax(auto, 600px) 1fr;
 }
 
+
+
 .Header {
-  grid-column: 2;
+  grid-column: 2 / span 2;
   grid-row: 1;
 }
 
