--- a/css/site.css
+++ b/css/site.css
@@ -16,9 +16,8 @@ body {
 
 .GridContainer {
   display: grid;
-  align-items: center;
   grid-template-columns: 1fr minmax(auto, 600px) 1fr;
-  grid-template-rows: 1fr minmax(auto, 600px) 1fr;
+  grid-template-rows: 1fr minmax(auto, 600px) 2em;
 }
 
 
